main: Add some validation fixes and README.md
