# src/Application/Service/Task/CreateFilterTaskRequestBuilder.php
@@ -14,34 +14,45 @@ class CreateFilterTaskRequestBuilder implements TaskRequestBuilderInterface
 
     public function build(array $data): CreateFilterRequest
     {
-        $createTaskRequest = new CreateFilterRequest();
+        $createFilterRequest = new CreateFilterRequest();
+
+        if (!empty($data['title'])) {
+            $createFilterRequest->setTitle($data['title']);
+        }
+
+        if (!empty($data['description'])) {
+            $createFilterRequest->setDescription($data['description']);
+        }
 
         if (!empty($data['status'])) {
-            $createTaskRequest->setStatus(Status::from($data['status']));
+            $createFilterRequest->setStatus(Status::from($data['status']));
         }
 
         if (!empty($data['priority'])) {
-            $createTaskRequest->setPriority(Priority::from($data['priority']));
-        }
-
-        if (!empty($data['assignedTo'])) {
-            $createTaskRequest->setAssignedTo($data['assignedTo']);
+            $createFilterRequest->setPriority(Priority::from($data['priority']));
         }
 
         if (!empty($data['dueDate'])) {
-            $start = new DateTime($data['createdAt'] . ' 00:00:00');
-            $end   = new DateTime($data['createdAt'] . ' 23:59:59');
-            $createTaskRequest->setDueDateFrom($start);
-            $createTaskRequest->setDueDateTo($end);
+            $start = new DateTime($data['dueDate'] . ' 00:00:00');
+            $end   = new DateTime($data['dueDate'] . ' 23:59:59');
+            $createFilterRequest->setDueDateFrom($start);
+            $createFilterRequest->setDueDateTo($end);
         }
 
        if (!empty($data['createdAt'])) {
             $start = new DateTime($data['createdAt'] . ' 00:00:00');
             $end   = new DateTime($data['createdAt'] . ' 23:59:59');
-            $createTaskRequest->setCreatedAtFrom($start);
-            $createTaskRequest->setCreatedAtTo($end);
+            $createFilterRequest->setCreatedAtFrom($start);
+            $createFilterRequest->setCreatedAtTo($end);
         }
 
-        return $createTaskRequest;
+        if (!empty($data['updatedAt'])) {
+            $start = new DateTime($data['updatedAt'] . ' 00:00:00');
+            $end   = new DateTime($data['updatedAt'] . ' 23:59:59');
+            $createFilterRequest->setUpdatedAtFrom($start);
+            $createFilterRequest->setUpdatedAtTo($end);
+        }
+
+        return $createFilterRequest;
     }
 }
